--- a/CandyAppReview.HW9_V2/Property List.plist
+++ b/CandyAppReview.HW9_V2/Property List.plist
@@ -2,11 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>New item</key>
-	<string></string>
+	<key>CategoryThreeImages</key>
+	<array>
+		<string>SugarCandy_Coca-ColaGummies</string>
+		<string>SugarCandy_GummyBears</string>
+		<string>SugarCandy_RingPop</string>
+		<string>SugarCandy_CandyCorn</string>
+	</array>
 	<key>CategoryTwoImages</key>
 	<array>
-		<string>JapanesSnack_HatoSable</string>
+		<string>JapaneseSnack_HatoSabre</string>
 		<string>JapaneseSnack_SapporoPotato</string>
 		<string>JapanesSnack_CountryMaam</string>
 		<string>JapaneseSnack_Yogurt</string>
